Oprava překlepu (TM Caffé - August)

--- a/caffe.topmonks.cz/src/data/events/2021-08-03.md
+++ b/caffe.topmonks.cz/src/data/events/2021-08-03.md
@@ -1,7 +1,7 @@
 ---
 sessionNumber: 84
 title: Jednoduše a rychle
-shortTitle: Lednoduše a rychle
+shortTitle: Jednoduše a rychle
 lecturers: Aleš Roubíček, Riki Fridrich
 date: 03. srpna 2021 od 19.00 do 21.00
 address: Loft N8, Nekázanka 8, Praha 1
