Topmonks.caffe - úprava sekcí v html a css

--- a/caffe.topmonks.cz/src/data/events/2022-04-05.md
+++ b/caffe.topmonks.cz/src/data/events/2022-04-05.md
@@ -4,6 +4,7 @@ title: Změna kariéry
 shortTitle: Změna kariéry
 lecturers: Jiří Píša, Gabriela Jičínská, Phuc Nguyen, Holdy-Kurth Mouyabi
 date: 05. dubna 2022 od 19.00 do 21.00
+shortDate: 05. dubna 2022
 address: Loft N8, Nekázanka 8, Praha 1
 mapLink: https://zive.tv/topmonks-caffe/
 link: https://www.meetup.com/TopMonks-Caffe/events/284177540/
