--- a/caffe.topmonks.cz/src/data/events/2922-05-03.md
+++ b/caffe.topmonks.cz/src/data/events/2922-05-03.md
@@ -4,6 +4,7 @@ title: Decentralised finances
 shortTitle: Decentralised finances
 lecturers: Lumír Mrkva, Dušan Kovačič
 date: 03. května 2022 od 19.00 do 21.00
+shortDate: 03. května 2022
 address: Loft N8, Nekázanka 8, Praha 1
 mapLink: https://zive.tv/topmonks-caffe/
 link: https://www.meetup.com/TopMonks-Caffe/events/285524034/
